# Aurora.3

./: .drone.yml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitignore.rej  .gitmodules  .prettierignore  .prettierrc.yml  .tgs.yml  .travis.install-mysql-5.7.sh  .travis.yml  .versions.sh  Nanako-PR-330.txt  Nanako-PR-331.yml  Nanako-PR-333.txt  Nanako-PR-333.yml  Nanako-PR-334.yml  Nanako-PR-338.yml  Nanako-PR-341.txt  Nanako-PR-341.yml  Nanako-PR-343.yml  Nanako-PR-345.yml  Nanako-PR-346.yml  Nanako-PR-348.yml  README.md  SpacemanDMM.toml  TGS3.json  ammo.dmi  aurorastation.dme  aurorastation.int  aurorastation.m.dme  baystation12.dme  baystation12.int  bbb.dmi  biome.json  burszia_station_areas.dm  codebase.txt  dependencies.sh  dionaedelicious.yml  (+16 more)
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  labeler.yml
.qodo/: history.sqlite
SQL/: Aurora_SQL_Schema.sql  Debug_tables.sql  README.md  aurora_characters_db.sql  feedback_schema.sql  tgstation_schema.sql
_maps/: _README.dm  adhomai.dm  aurora.dm  away_sites_testing.dm  exodus.dm  exoplanet_testing.dm  home.dm  lavaland.dm  runtime.dm  sccv_horizon.dm
bot/: borealisbot.py  config.example.yml
byvue/: index.js  package-lock.json  package.json  store.js  template.html  webpack.config.js
code/: ___odlint.dm  __linters.dm  _compile_options.dm  _macros.dm  global.dm  hub.dm  names.dm  setup.dm  (+4 more)
rust/bapi/: Cargo.toml  README.md
rust/bapi/src/: lib.rs
rust/bapi/src/logging/: mod.rs
rust/bapi/src/mapmanip/: mod.rs  test.rs
rust/bapi/src/mapmanip/core/: map_to_string.rs  mod.rs  to_dict_map.rs  to_grid_map.rs
rust/bapi/src/mapmanip/procgen/: mod.rs
rust/bapi/src/mapmanip/tools/: extract_sub_map.rs  extract_submap.rs  insert_sub_map.rs  insert_submap.rs  mod.rs
(+23255 files in other folders)
